--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="btn">Launch Live Preview</button>
           </div>
           <div class="action-img">
-            <img src="./Assests/wc-mini.png" alt="" />
+            <img src="./Assets/wc-mini.png" alt="" />
           </div>
         </div>
       </section>
@@ -69,11 +69,11 @@
         <div class="user-card-content">
           <div class="user-card">
             <div class="star-icon">
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
             </div>
             <h3>Loved by Designers</h3>
             <p>
@@ -82,7 +82,7 @@
             </p>
             <div class="review-icon">
               <div>
-                <img src="./Assests/avatar.png" alt="" />
+                <img src="./Assets/avatar.png" alt="" />
               </div>
               <div class="review">
                 <strong>Reviewer name</strong><br />
@@ -92,11 +92,11 @@
           </div>
           <div class="user-card">
             <div class="star-icon">
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
             </div>
             <h3>Loved by Designers</h3>
             <p>
@@ -105,7 +105,7 @@
             </p>
             <div class="review-icon">
               <div>
-                <img src="./Assests/avatar.png" alt="" />
+                <img src="./Assets/avatar.png" alt="" />
               </div>
               <div class="review">
                 <strong>Reviewer name</strong><br />
@@ -115,11 +115,11 @@
           </div>
           <div class="user-card">
             <div class="star-icon">
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
-              <img src="./Assests/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
+              <img src="./Assets/icon-star.png" alt="" />
             </div>
             <h3>Loved by Designers</h3>
             <p>
@@ -128,7 +128,7 @@
             </p>
             <div class="review-icon">
               <div>
-                <img src="./Assests/avatar.png" alt="" />
+                <img src="./Assets/avatar.png" alt="" />
               </div>
               <div class="review">
                 <strong>Reviewer name</strong><br />
@@ -150,7 +150,7 @@
             <button class="btn-primary"><a href="">Get Started</a></button>
           </div>
           <div class="focus-img">
-            <img src="./Assests/wc-big.png" alt="" />
+            <img src="./Assets/wc-big.png" alt="" />
           </div>
         </div>
       </section>
